Adds developer commands